# AgoraSynth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RUN  RUN_CIB  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark_full_map.py  benchmark_sampler.py  build_dataset.py  build_dataset_cib.py  build_wph_prior.py  build_wph_prior_cib.py  build_wph_targets_cib_sharded.py  infer_joint_numpyro.py  inference_fm_prior_dps.py  inference_simple.py  plot_cib_realizations.py  plot_full_map.py  precompute_reflow_pairs.py  precompute_wph_targets.py  precompute_wph_targets_cib.py  sample_fm.py  sample_fm_cib.py  submit_cib_train.sh  synthesize_full_map.py  synthesize_full_map_cib.py  synthesize_full_map_cib_coherent.py  synthesize_full_map_coherent.py  train_fm_wph.py  train_fm_wph_cib.py  train_reflow.py
src/agorasynth/: __init__.py  data.py  flow_matching.py  inference.py  unet.py  wph.py  wph_filters.py
tests/: test_cib_smoke.py  test_smoke.py
